# agentX

./: .gitignore  LICENSE  README.md  README_CONVERSATIONAL_JS_CRAWLER.md  aaa.bat  all_files.txt  chatgpt.py  chrome_cdp_client.py  claude_mcp_config.json  claude_mcp_readme.md  cmd_manager.py  cmd_to_execute.bat  conversational_js_crawler.py  demo_js_crawler.py  file_list.txt  filelist.txt  js_code_extractor.py  mcp_test.py  nextStep(2).md  nextStep.md  pyproject.toml  pyvenv.cfg  query_param_test.py  requirements.txt  server.py  simple_chrome_url.py  size_list.txt  sizes.txt  sse_chrome_client.py  task_complete.flag  test0.py  test1.py  test2.py  test_chrome_url.py  test_chrome_url_fixed.py  test_interactive_js.py
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  fixup_firestore_admin_v1_keywords.py  fixup_firestore_v1_keywords.py  jp.py  jsonpointer
a64dbg/: README.md  controller.py  findSetupButton.py  gui_utils.py  main.py  memory_utils.py  requirements.txt
a64dbg/hooks/: __init__.py  (+5 more)
agents/: filelist.tmp  xursor_client.py
cmdman/: cmd_manager.py
config/: claude_mcp_config.json
crawls/: 20250507_https___www_google_com_구글맵을이용하여,지명,혹은,건물명의gps주소추출.json  20250507_https___www_google_com_구글에 접속한 뒤에 구글의 소소를 참조하여 구글맵의 웹소스를 확인하고, 구글맵을이용하여,지명,혹은,건물명의gps주소추출.json  20250508_https___translate_google_co_kr__sl_en_tl_ko_op_tra_구글번역이 어떻게 음성을 실시간으로 처리하는지 크롤링하세요.json  20250508_https___www_google_com_구글에 접속한 뒤에 구글의 소소를 참조하여 구글맵의 웹소스를 확인하고, 구글맵을이용하여,지명,혹은,건물명의gps주소추출.json  20250508_https___www_youtube_com_watch_v_o7wf2b2CRc4_유튜브 영상의 요약을 크롤링하세요.json
docs/: README.md  README_KR.md
tests/: test0.py  test1.py  test2.py
xlsxman/: xlsx_manager.py
(+30 files in other folders)
