[project]
name = "chrome-debug-console-mcp"
version = "0.1.0"
description = "Chrome DevTools Protocol MCP Server for controlling the Chrome Debug Console"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Chrome Debug Console MCP Team" }]
keywords = ["chrome", "debug", "cdp", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.5.0",
    "websockets>=10.0.0",
    "requests>=2.0.0",
    "pydantic>=2.0.0",
    "anyio>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "ruff>=0.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/username/chrome-debug-console-mcp"
Issues = "https://github.com/username/chrome-debug-console-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
